--- a/extension/CMakeLists.txt
+++ b/extension/CMakeLists.txt
@@ -1,4 +1,5 @@
-project(extension)
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.24)
+
+project(ldl-extension VERSION 0.1)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
